# NovelForge

./: README.md
GearTracker/: CMakeLists.txt  main.cpp  readme.md  test_mysql  test_mysql.cpp
GearTracker/config/: config.ini
GearTracker/include/: Config.h  Database.h  WebServer.h
GearTracker/src/: Config.cpp  Database.cpp  WebServer.cpp  main.cpp
GearTracker/web/: index.html
GearTracker/web/css/: styles.css
GearTracker/web/js/: main.js
NovelValue/: CMakeLists.txt  config.json
NovelValue/data/: items-base.json
NovelValue/include/: db_config.h  item.h
NovelValue/src/: db_config.cpp  item.cpp  main.cpp
RoleSimulator/: CMakeLists.txt  test.cpp
RoleSimulator/config/: db_config.json
RoleSimulator/include/: Character.h  DatabaseManager.h  SimulatorApp.h
RoleSimulator/src/: Character.cpp  DatabaseManager.cpp  SimulatorApp.cpp  main.cpp
